--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CyberISE - CTF</title>
-  
 
     <link rel="stylesheet" href="/styles/styles.css" />
     <style>
@@ -144,30 +143,29 @@
 
     <div class="hero">
       <h1 class="hero-heading">SecureCodeX</h1>
-      <p class="hero-caption">A 12 Hour CTF Challenge</p>
-    </div>    
-
-   
+      <p class="hero-caption">Where Security Meets Skill
+      </p>
+    </div>
 
     <section id="features" class="features-section">
       <div class="container">
-        <h2>Benefits of CTF</h2>
+        <h2>Our Products
+        </h2>
         <div class="features">
           <div class="feature-card card">
             <h3>CTF Builder</h3>
             <p>
-              Gain practical experience with real-world security tools, tricks
-              and techniques.
+              Master real-world cybersecurity tools and techniques through
+              hands-on challenges and practical scenarios.
             </p>
           </div>
           <div class="feature-card card">
-            <h3>Problem Solving</h3>
+            <h3>Treasure Hunt</h3>
             <p>
-              Develop analytical skills by solving complex technical challenges
-              in cybersecurity.
+              Sharpen your problem-solving skills by tackling intricate
+              cybersecurity puzzles and technical challenges.
             </p>
           </div>
-          
         </div>
       </div>
     </section>
