--- a/views/index.ejs
+++ b/views/index.ejs
@@ -159,13 +159,13 @@
               hands-on challenges and practical scenarios.
             </p>
           </div>
-          <div class="feature-card card">
+          <a href="https://treasure-hunt-umber.vercel.app/" style="text-decoration: none;"><div class="feature-card card">
             <h3>Treasure Hunt</h3>
             <p>
               Sharpen your problem-solving skills by tackling intricate
               cybersecurity puzzles and technical challenges.
             </p>
-          </div>
+          </div></a>
         </div>
       </div>
     </section>
